# rust-startup-welcome

./: Cargo.toml
resources/: processes.txt
src/: checklist  main.rs
