[package]
name = "hapjacks-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
byte-unit = "5.1.4"
compound_duration = "1.2.1"
figlet-rs = "0.1.5"
online = "4.0.2"
raw-cpuid = "11.2.0"
regex = "1.10.5"
sys-info = "0.9.1"
sysinfo = "0.30.13"
tokio = { version = "1.0" , features = ["full"] }
whoami = "1.5.1"
